fix dark mode button in login pages

--- a/app/styles/app-blue.css
+++ b/app/styles/app-blue.css
@@ -1403,8 +1403,8 @@ button {
   border-radius: 4px;
   cursor: pointer; }
 
-/* button:hover {
-  background-color: #5469d4; } */
+button:hover {
+  background-color: #5469d4; }
 
 /* Login page styles */
 .login-overlay {
