--- a/app/styles/app-grey.css
+++ b/app/styles/app-grey.css
@@ -1396,15 +1396,15 @@ md-content::-webkit-scrollbar-thumb:hover {
   margin-bottom: 10px; }
 
 button {
-  /* background-color: #6772e5; */
+  background-color: #6772e5;
   color: #fff;
   padding: 8px 12px;
   border: none;
   border-radius: 4px;
   cursor: pointer; }
 
-/* button:hover {
-  background-color: #5469d4; } */
+button:hover {
+  background-color: #5469d4; }
 
 /* Login page styles */
 .login-overlay {
